# scorep_plugin_cxx_wrapper

./: .gitmodules  AUTHORS  CMakeLists.txt  README.md  ScorepCXXPlugin.cmake  scorep_async_object_id_test_plugin.cpp  scorep_async_test_plugin.cpp  scorep_sync_strict_test_plugin.cpp  scorep_sync_test_plugin.cpp
cmake/: NitroLog.cmake
include/: matcher.hpp
include/nitro/args/: args.hpp
include/nitro/dl/: dl.hpp  exception.hpp  symbol.hpp
include/nitro/log/: log.hpp  logger.hpp  record.hpp  severity.hpp  stream.hpp
include/nitro/log/attribute/: hostname.hpp  message.hpp  mpi_rank.hpp  omp_thread_id.hpp  pid.hpp  pthread_id.hpp  severity.hpp  std_thread_id.hpp  timestamp.hpp
include/nitro/log/detail/: has_attribute.hpp  set_attribute.hpp
include/nitro/log/filter/: and_filter.hpp  mpi_master_filter.hpp  not_filter.hpp  null_filter.hpp  or_filter.hpp  severity_filter.hpp
include/nitro/log/sink/: null.hpp  stderr.hpp  stdout.hpp  stdout_mt.hpp
include/nitro/meta/: variadic.hpp
include/scorep/: exception.hpp  util.hpp
include/scorep/chrono/: chrono.hpp  measurement_clock.hpp  tagged_duration.hpp  ticks.hpp  time_convert.hpp
include/scorep/plugin/: base.hpp  interface.hpp  log.hpp  metric_property.hpp  plugin.hpp
include/scorep/plugin/policy/: async.hpp  frequent.hpp  fwd.hpp  initialize.hpp  object_id.hpp  once.hpp  per_host.hpp  per_process.hpp  per_thread.hpp  policies.hpp  post_mortem.hpp  scorep_clock.hpp  sync.hpp  sync_strict.hpp  synchronize.hpp
include/scorep/plugin/traits/: build_info.hpp  has_all_of.hpp  has_one_of.hpp  has_policy.hpp  list.hpp  static_polymorph_resolve.hpp
include/scorep/plugin/util/: environment.hpp  matcher.hpp  memory.hpp  plugin.hpp  types.hpp
tests/: matcher_test.cpp
